# hashtrivia

./: README.md  pyproject.toml
src/hashtrivia/: app.py  gui.py  hash_calculation.py  util.py
test_data/: hash_gt__test_file_1.csv  test_file_1.csv
tests/: util.py
tests/hashtrivia/: test_gui.py  test_hash_calculation.py
